--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,2 +1,45 @@
 @import "tailwindcss";
 
+.recipes-list-container {
+  @apply py-10 bg-gray-200;
+
+  h1 {
+    @apply text-center text-3xl mb-6;
+  }
+
+  .recipes-list {
+    @apply w-max mx-auto flex flex-col gap-5 items-center md:grid md:grid-cols-2  lg:grid-cols-3 xl:grid-cols-4;
+  }
+}
+
+.recipe-preview-card {
+  @apply w-[300px] text-gray-600 rounded-lg bg-white overflow-hidden;
+
+  .recipe-preview-card__image-container {
+    @apply w-full h-[200px];
+
+    .recipe-preview-card__image {
+      @apply object-cover w-full;
+    }
+  }
+
+  .recipe-preview-card__info {
+    @apply flex gap-4 mt-2 px-4;
+
+    span {
+      @apply flex items-center gap-1;
+    }
+  }
+
+  .recipe-preview-card__title {
+    @apply text-2xl text-gray-800 font-bold mb-2 px-4;
+  }
+
+  .recipe-preview-card__line {
+    @apply mx-4;
+  }
+
+  .recipe-preview-card__type {
+    @apply mb-3 px-4;
+  }
+}
